pipeline execution readme